kubernetes/apps/media/radarr/ingress.yaml
# Kapitel 20: radarr im Tailnet unter https://radarr.<tailnet>.ts.net
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: radarr
      port:
        number: 7878
  tls:
    - hosts:
        - radarr
